src/catalog/kustomize/overlay/develop/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog
  labels:
    app: catalog
spec:
  selector:
    app: catalog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
